--- a/config/config.org
+++ b/config/config.org
@@ -45,6 +45,14 @@ Package Manager: `straight.el`
   (setq straight-use-package-by-default t)
   (setq straight-vc-git-default-clone-depth '(1 single-branch))  ;; instead of the default 'full
   (setq use-package-verbose nil) ;; use 't' to see execution profile at startup
+
+  (require 'package)
+  (add-to-list 'package-archives '("melpa" . "https://melpa.org/packages/") t)
+  ;; Comment/uncomment this line to enable MELPA Stable if desired.  See `package-archive-priorities`
+  ;; and `package-pinned-packages`. Most users will not need or want to do this.
+  ;;(add-to-list 'package-archives '("melpa-stable" . "https://stable.melpa.org/packages/") t)
+  (package-initialize)
+
 #+end_src
 
 [[https://github.com/radian-software/straight.el#tldr][See Documentation.]]
@@ -470,6 +478,12 @@ Improved searching and file browsing experience.
   :commands (magit-status magit-get-current-branch)
   :custom
   (magit-display-buffer-function #'magit-display-buffer-same-window-except-diff-v1))
+#+end_src
+** neotree
+#+begin_src emacs-lisp
+(use-package neotree
+  :ensure t
+  :bind (("C-c t" . neotree-toggle)))
 #+end_src
 ** hl-line
 #+begin_src emacs-lisp
