--- a/config/config.org
+++ b/config/config.org
@@ -729,6 +729,100 @@ Revert buffers when underlying file changes
 #+end_src
 
 * Language Support
+** beancount
+*** mode
+#+begin_src emacs-lisp
+  ;;
+  ;; Emacs setup for Ledger.
+  ;;
+
+  (require 'beancount)
+
+  ;; Automatically open .beancount files in beancount-mode.
+  (add-to-list 'auto-mode-alist '("\\.beancount$" . beancount-mode))
+
+  ;; Support parsing Python logging errors, with a suitable logging.basicConfig()
+  ;; format.
+  (unless (assq 'python-logging compilation-error-regexp-alist-alist)
+
+    (add-to-list
+     'compilation-error-regexp-alist-alist
+     '(python-logging "\\(ERROR\\|WARNING\\):\\s-*\\([^:]+\\):\\([0-9]+\\)\\s-*:" 2 3))
+
+    (add-to-list
+     'compilation-error-regexp-alist 'python-logging)
+    )
+
+
+  ;; Experimental: Bind a key to reformat the entire file using bean-format.
+  (defun beancount-format-file ()
+    (interactive)
+    (let ((line-no (line-number-at-pos)))
+        (call-process-region (point-min) (point-max) "bean-format" t (current-buffer))
+        (goto-line line-no)
+        (recenter)
+        ))
+
+  ;; Make sure we don't accidentally pick up ;;; as headers. Use org section headers only.
+  (setq beancount-outline-regexp "\\(\\*+\\)")
+  (setq beancount-number-alignment-colum 77)
+  ;; Disable auto-indent.
+  (defun disable-electric-indent ()
+    (setq-local electric-indent-chars nil))
+  (add-hook 'beancount-mode-hook #'disable-electric-indent)
+
+  ;; `beancount-number-alignment-column`. Setting it to 0 will cause the
+  ;; alignment column to be determined from file content.  Postings in
+  ;; transactions are indented with `beancount-transaction-indent` spaces.
+
+
+  (defadvice shell-quote-argument (around dont-quote-already-quoted-args activate)
+    "Avoid quoting argument if it's already quoted."
+    (let ((arg (ad-get-arg 0)))
+      (setq ad-return-value
+            (if (or (string-match "\".*\"$" arg)
+                    (string-match "\'.*\'$" arg))
+                arg ad-do-it))))
+
+  (defvar beancount-journal-command
+    (concat
+     "select date, flag, maxwidth(description, 80), position, balance "
+     "where account = '%s'"))
+
+  (defun beancount-query-journal-at-point ()
+    "Run a journal command for the account at point."
+    (interactive)
+    (let* ((account (thing-at-point 'beancount-account))
+           (sql (concat "\"" (format beancount-journal-command account) "\"")))
+      (beancount--run beancount-query-program
+                      (file-relative-name buffer-file-name)
+                      sql)))
+
+  ;; TODO: Refine this a bit later on.
+  (defvar beancount-balance-command
+    (concat
+     "select account, sum(position) "
+     "where account ~ '%s' "
+     "group by 1 "
+     "order by 1"))
+
+  (defun beancount-query-balance-at-point ()
+    "Run a balance command for the account at point."
+    (interactive)
+    (let* ((account (thing-at-point 'beancount-account))
+           (sql (concat "\"" (format beancount-balance-command account) "\"")))
+      (beancount--run beancount-query-program
+                      (file-relative-name buffer-file-name)
+                      sql)))
+
+#+end_src
+*** hooks
+#+begin_src emacs-lisp
+  (add-hook 'beancount-mode-hook #'linum)	             ; Require Linum 
+  (add-hook 'beancount-mode-hook #'hl-line-mode)       ; Require HL-Line
+  (add-hook 'beancount-mode-hook #'outline-minor-mode) ; Require Outline
+#+end_src
+
 ** org-mode
 *** org-tempo
 A shortcut for emacs-lisp source blocks. Type “<S” (in org-mode) then press tab.
