--- a/config/config.org
+++ b/config/config.org
@@ -130,6 +130,16 @@ User Settings:
 Startup Settings and Optimizations:
 
 #+begin_src emacs-lisp
+  ;; temp workaround for node
+  (use-package exec-path-from-shell
+  :ensure t
+  :config
+  (exec-path-from-shell-initialize))
+  (setenv "PATH"
+        (concat
+         "/home/alex/.local/bin" path-separator
+         (getenv "PATH")))
+  ;;
   (setq-default
    inhibit-startup-screen t                         ; Disable start-up screen
    inhibit-startup-message t                        ; Disable startup message
@@ -160,12 +170,6 @@ Frame Settings:
    
 #+begin_src emacs-lisp
   (setq frame-title-format "%b : %f") 	        ; file : path 
-#+end_src
-
-**** Initial Frame Size
-#+begin_src emacs-lisp
-(setq initial-frame-alist
-       '((top . 1) (left . 1) (width . 100) (height . 55)))
 #+end_src
 
 **** Line Numbers
@@ -257,8 +261,8 @@ Documentation.]]
 *** Font
 Font Settings:
 #+begin_src emacs-lisp
-  (set-frame-font "Droid Sans Mono Slashed 14" nil t)
-  (set-face-attribute 'fixed-pitch nil :font "Droid Sans Mono Slashed 14")
+  (set-frame-font "Droid Sans Mono Slashed 12" nil t)
+  (set-face-attribute 'fixed-pitch nil :font "Droid Sans Mono Slashed 12")
 #+end_src
 * Further Customization
 #+begin_src emacs-lisp
@@ -474,10 +478,11 @@ Improved searching and file browsing experience.
 
 ** magit
 #+begin_src emacs-lisp
-(use-package magit
-  :commands (magit-status magit-get-current-branch)
-  :custom
-  (magit-display-buffer-function #'magit-display-buffer-same-window-except-diff-v1))
+  (use-package magit
+    :commands (magit-status magit-get-current-branch)
+    :custom
+    (magit-display-buffer-function #'magit-display-buffer-same-window-except-diff-v1))
+    (setq magit-bury-buffer-function #'magit-mode-quit-window)
 #+end_src
 ** neotree
 #+begin_src emacs-lisp
@@ -519,17 +524,6 @@ Auto Tangle this file on save.
   (add-hook 'org-mode-hook
             (lambda ()
               (add-hook 'after-save-hook #'org-babel-tangle-config)))
-#+end_src
-
-** auto-complete
-#+begin_src emacs-lisp
-;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;
-;;             AUTO-COMPLETE              ;;
-;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;
-#+end_src
-
-#+begin_src emacs-lisp
-  (ac-config-default) 			; standard ac config
 #+end_src
 
 ** helpful
@@ -677,39 +671,131 @@ Custom Key Bindings
 #+begin_src emacs-lisp
 (global-set-key (kbd "<escape>")   'keyboard-escape-quit)
 #+end_src
-** electric
+** lsp-mode
 #+begin_src emacs-lisp
-(defun electric-pair ()
-      "If at end of line, insert character pair without surrounding spaces.
-    Otherwise, just insert the typed character."
-      (interactive)
-      (if (eolp) (let (parens-require-spaces) (insert-pair)) (self-insert-command 1)))
+;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;
+;;                LSP-MODE                ;;
+;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;
+#+end_src
 
-  
-  (add-hook 'python-mode-hook
-                (lambda ()
-                  (define-key python-mode-map "\"" 'electric-pair)
-                  (define-key python-mode-map "\'" 'electric-pair)
-                  (define-key python-mode-map "(" 'electric-pair)
-                  (define-key python-mode-map "[" 'electric-pair)
-                  (define-key python-mode-map "{" 'electric-pair)))
+#+begin_src emacs-lisp
+(use-package lsp-mode
+  :init
+  (setq lsp-keymap-prefix "C-c l")
+  :hook ((typescript-mode . lsp)
+         (python-mode . lsp))
+  :commands lsp
+  :config
+  (setq lsp-enable-symbol-highlighting t
+        lsp-enable-on-type-formatting t
+        lsp-enable-indentation t
+        lsp-headerline-breadcrumb-enable t
+        lsp-modeline-diagnostics-enable t
+        lsp-completion-enable t))
+
+(use-package lsp-ui
+  :commands lsp-ui-mode
+  :config
+  (setq lsp-ui-doc-enable t
+        lsp-ui-doc-position 'at-point
+        lsp-ui-doc-delay 0.5
+        lsp-ui-sideline-enable t
+        lsp-ui-sideline-show-diagnostics t))
 #+end_src
 ** copilot
-Setup github copilot
 #+begin_src emacs-lisp
-  (use-package copilot
-  :straight (:host github :repo "copilot-emacs/copilot.el" :files ("*.el"))
-  :ensure t)
-  (add-hook 'prog-mode-hook 'copilot-mode)
-  (define-key copilot-completion-map (kbd "<tab>") 'copilot-accept-completion)
-  (define-key copilot-completion-map (kbd "TAB") 'copilot-accept-completion)
+;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;
+;;               COPILOT                  ;;
+;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;
 #+end_src
 
+#+begin_src emacs-lisp
+(use-package copilot
+  :straight (:host github :repo "copilot-emacs/copilot.el" :files ("*.el"))
+  :ensure t
+  :init
+  (setq copilot-node-executable "node")
+  :hook ((prog-mode . copilot-mode)
+         (text-mode . copilot-mode))
+  :bind (:map copilot-completion-map
+              ("<tab>" . 'copilot-accept-completion)
+              ("TAB" . 'copilot-accept-completion)
+              ("C-TAB" . 'copilot-accept-completion-by-word)
+              ("C-<tab>" . 'copilot-accept-completion-by-word)
+              ("M-TAB" . 'copilot-next-completion)
+              ("M-<tab>" . 'copilot-next-completion))
+  :config
+  (setq copilot-idle-delay 0.1)
+  (define-key global-map (kbd "C-c C-/") 'copilot-complete))
+#+end_src
+** ws-butler
+#+begin_src emacs-lisp
+;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;
+;;               WS-BUTLER                ;;
+;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;
+#+end_src
+
+#+begin_src emacs-lisp
+(use-package ws-butler
+  :hook ((text-mode . ws-butler-mode)
+         (prog-mode . ws-butler-mode)))
+#+end_src
+** company
+#+begin_src emacs-lisp
+;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;
+;;               COMPANY                  ;;
+;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;
+#+end_src
+
+#+begin_src emacs-lisp
+(use-package company
+  :hook (after-init . global-company-mode)
+  :config
+  (setq company-idle-delay 0.1
+        company-minimum-prefix-length 1
+        company-selection-wrap-around t
+        company-tooltip-align-annotations t))
+#+end_src
+** smartparens
+#+begin_src emacs-lisp
+;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;
+;;             SMARTPARENS                ;;
+;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;
+#+end_src
+
+#+begin_src emacs-lisp
+(use-package smartparens
+  :hook (prog-mode . smartparens-mode)
+  :config
+  (require 'smartparens-config))
+#+end_src
+** rainbow-delimiters
+#+begin_src emacs-lisp
+;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;
+;;         RAINBOW-DELIMITERS            ;;
+;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;
+#+end_src
+
+#+begin_src emacs-lisp
+(use-package rainbow-delimiters
+  :hook (prog-mode . rainbow-delimiters-mode))
+#+end_src
+** git-gutter
+#+begin_src emacs-lisp
+;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;
+;;             GIT-GUTTER                ;;
+;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;
+#+end_src
+
+#+begin_src emacs-lisp
+(use-package git-gutter
+  :hook (prog-mode . git-gutter-mode))
+#+end_src
 ** misc.
 Set emacs browser. This configuration only works on MacOS
 #+begin_src emacs-lisp
 (setq browse-url-browser-function 'browse-url-generic
-      browse-url-generic-program "/Applications/Google Chrome.app/Contents/MacOS/Google Chrome")
+      browse-url-generic-program "/usr/bin/google-chrome")
 #+end_src
 
 Load user settings if available
