--- a/config/config.org
+++ b/config/config.org
@@ -53,6 +53,11 @@ Package Manager: `straight.el`
   ;;(add-to-list 'package-archives '("melpa-stable" . "https://stable.melpa.org/packages/") t)
   (package-initialize)
 
+  (setq byte-compile-warnings '((not docstrings-wide)))
+
+  (setq straight-check-for-modifications '(check-on-save find-when-checking))
+  (setq straight-cache-autoloads t)
+
 #+end_src
 
 [[https://github.com/radian-software/straight.el#tldr][See Documentation.]]
@@ -155,6 +160,7 @@ Startup Settings and Optimizations:
 
   (setq initial-major-mode 'text-mode)	        ; Start with text-mode
   (add-hook 'text-mode-hook 'turn-on-auto-fill)	; Auto-Fill
+  (setq native-comp-async-report-warnings-errors nil)
 #+end_SRC
 
 ** Basic UI 
@@ -479,10 +485,14 @@ Improved searching and file browsing experience.
 ** magit
 #+begin_src emacs-lisp
   (use-package magit
-    :commands (magit-status magit-get-current-branch)
-    :custom
-    (magit-display-buffer-function #'magit-display-buffer-same-window-except-diff-v1))
-    (setq magit-bury-buffer-function #'magit-mode-quit-window)
+  :ensure t
+  :init
+  (require 'magit-diff)
+  :custom
+  (magit-display-buffer-function #'magit-display-buffer-same-window-except-diff-v1)
+  :config
+  (setq magit-refresh-status-buffer t)
+  (setq magit-diff-refine-hunk t))
 #+end_src
 ** neotree
 #+begin_src emacs-lisp
@@ -568,18 +578,18 @@ Spell checking through flyspell
 ** projectile
 #+begin_src emacs-lisp
   (use-package projectile
-    :diminish projectile-mode
-    :config (projectile-mode)
-    :custom (projectile-completion-system 'ivy)
-    :bind-keymap
-    ("C-c p" . projectile-command-map)
-    :init
-    (when (file-directory-p "~/lab")
-      (setq projectile-project-search-path '("~/lab")))
-    (setq projectile-switch-project-action #'projectile-dired))
+  :diminish projectile-mode
+  :config (projectile-mode)
+  :custom (projectile-completion-system 'ivy)
+  :bind-keymap
+  ("C-c p" . projectile-command-map)
+  :init
+  (when (file-directory-p "~/lab")
+    (setq projectile-project-search-path '("~/lab")))
+  (setq projectile-switch-project-action #'projectile-dired))
 
-  (use-package counsel-projectile
-  :config (counsel-projectile-mode))
+(use-package counsel-projectile
+:config (counsel-projectile-mode))
 #+end_src
 ** undo-tree
 #+begin_src emacs-lisp
@@ -670,6 +680,7 @@ Insert the date, the time, and the date and time at point.
 Custom Key Bindings
 #+begin_src emacs-lisp
 (global-set-key (kbd "<escape>")   'keyboard-escape-quit)
+(global-set-key (kbd "C-c w") 'delete-trailing-whitespace)
 #+end_src
 ** lsp-mode
 #+begin_src emacs-lisp
@@ -681,6 +692,7 @@ Custom Key Bindings
 #+begin_src emacs-lisp
 (use-package lsp-mode
   :init
+  (setq lsp-auto-guess-root t)  ; Automatically guess project root
   (setq lsp-keymap-prefix "C-c l")
   :hook ((typescript-mode . lsp)
          (python-mode . lsp))
@@ -689,7 +701,7 @@ Custom Key Bindings
   (setq lsp-enable-symbol-highlighting t
         lsp-enable-on-type-formatting t
         lsp-enable-indentation t
-        lsp-headerline-breadcrumb-enable t
+        lsp-headerline-breadcrumb-enable nil
         lsp-modeline-diagnostics-enable t
         lsp-completion-enable t))
 
@@ -710,23 +722,29 @@ Custom Key Bindings
 #+end_src
 
 #+begin_src emacs-lisp
-(use-package copilot
-  :straight (:host github :repo "copilot-emacs/copilot.el" :files ("*.el"))
-  :ensure t
-  :init
-  (setq copilot-node-executable "node")
-  :hook ((prog-mode . copilot-mode)
-         (text-mode . copilot-mode))
-  :bind (:map copilot-completion-map
-              ("<tab>" . 'copilot-accept-completion)
-              ("TAB" . 'copilot-accept-completion)
-              ("C-TAB" . 'copilot-accept-completion-by-word)
-              ("C-<tab>" . 'copilot-accept-completion-by-word)
-              ("M-TAB" . 'copilot-next-completion)
-              ("M-<tab>" . 'copilot-next-completion))
-  :config
-  (setq copilot-idle-delay 0.1)
-  (define-key global-map (kbd "C-c C-/") 'copilot-complete))
+  (use-package copilot
+    :straight (:host github :repo "copilot-emacs/copilot.el" :files ("*.el"))
+    :ensure t
+    :init
+    (setq copilot-node-executable "node")
+    :hook ((prog-mode . copilot-mode)
+           (text-mode . copilot-mode))
+    :bind (:map copilot-completion-map
+                ("<tab>" . 'copilot-accept-completion)
+                ("TAB" . 'copilot-accept-completion)
+                ("C-TAB" . 'copilot-accept-completion-by-word)
+                ("C-<tab>" . 'copilot-accept-completion-by-word)
+                ("M-TAB" . 'copilot-next-completion)
+                ("M-<tab>" . 'copilot-next-completion))
+    :config
+    (setq copilot-idle-delay 0.1)
+    (define-key global-map (kbd "C-c C-/") 'copilot-complete))
+
+  (setq copilot-max-char 1000000) ; Increase character limit to 1 million
+  (setq copilot-indent-offset-warning-disable t)  ; Disable indentation warnings
+  (setq copilot-indent-offset-alist '((typescript-mode . typescript-indent-level)
+                                   (python-mode . python-indent-offset)
+                                   (text-mode . 4)))
 #+end_src
 ** ws-butler
 #+begin_src emacs-lisp
